index_et0024 includes image filewq

--- a/public/index_et0024.html
+++ b/public/index_et0024.html
@@ -5,6 +5,6 @@
 <title>Hello from ET0024</title>
 </head>
 <body>
-<p>Hello!</p>
+<img src="figure/doutor.jpg" alt="no figure found">
 </body>
 </html>
